# img2img_unet

./: .gitignore  README.md  pyproject.toml
colorization/: eda_notebook.py  inference.py  model.py  train.py
denoising/: model.py  test_notebook.py  train.py
face_age_estimation/: convert.py  eda.ipynb  inference.ipynb  metric.ipynb  model.py  to_onnx.py  train.py
face_age_estimation/face_estimator_app/: CMakeLists.txt  README.md  main.cpp
face_age_estimation/logs/face-efficientnet/version_4/: hparams.yaml
face_age_estimation/logs/face-efficientnet/version_7/: metrics.csv
face_age_estimation/logs/face-efficientnet/version_8/: metrics.csv
face_age_estimation/logs/face-efficientnet/version_9/: hparams.yaml  metrics.csv
