[project]
name = "img2img-unet"
version = "0.1.0"
description = "Image 2 Image Unet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "lightning>=2.6.1",
    "marimo>=0.19.6",
    "matplotlib>=3.10.8",
    "mlx>=0.30.3",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "pyzmq>=27.1.0",
    "seaborn>=0.13.2",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]
